# ann-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: benchmarks.yml
ann_benchmarks/: datasets.py  main.py  results.py  runner.py
ann_benchmarks/algorithms/: CMakeLists.txt
ann_benchmarks/algorithms/alaya/: .gitignore  CMakeLists.txt  Dockerfile  bind.cpp  config.yml  module.py  perform.sh  pybinding.cpp  python_interface.py  run_test.sh  setup.py  test_alaya.cpp  utils.h
ann_benchmarks/algorithms/alaya/alaya-bak/: baseline.cpp  hybrid_graph.cpp  hybrid_graph.h
ann_benchmarks/algorithms/alaya/alaya.egg-info/: PKG-INFO  SOURCES.txt
ann_benchmarks/algorithms/alaya/ann_test/: module.py
ann_benchmarks/algorithms/alaya/main/: main.cpp  read_file.cpp
ann_benchmarks/algorithms/alaya/pyglass/: CMakeLists.txt  bind.cpp
ann_benchmarks/algorithms/alaya/pyglass-filter/glass/simd/: distance.hpp
ann_benchmarks/algorithms/alaya/pyglass/glass/: io_utils.hpp  neighbor.hpp  rerank.hpp  searcher.hpp  timer.hpp  utils.hpp
ann_benchmarks/algorithms/alaya/pyglass/glass/hnsw/: hnsw.hpp
ann_benchmarks/algorithms/alaya/pyglass/glass/hnswlib/: space_l2.h
ann_benchmarks/algorithms/alaya/pyglass/glass/mergraph/: mergraph.hpp
ann_benchmarks/algorithms/alaya/pyglass/glass/quant/: fp32_quant.hpp  quant.hpp  sq4_quant.hpp  sq8_quant.hpp  sq8_sym_quant.hpp
ann_benchmarks/algorithms/alaya/pyglass/glass/simd/: distance.hpp
ann_benchmarks/algorithms/alaya/pyglass/main/: main.cpp
ann_benchmarks/algorithms/milvus/: Dockerfile  config.yml  module.py
ann_benchmarks/algorithms/nsg/: .gitignore  CMakeLists.txt  config.yml  module.py  performance.sh
ann_benchmarks/algorithms/nsg/include/efanna2e/: index.h
ann_benchmarks/algorithms/nsg/python/: bingdings.cc
ann_benchmarks/algorithms/nsg/tests/: CMakeLists.txt  baseline.cpp  grouth_test.cpp  nsg_index.cpp  test_nndescent_refine.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp
ann_benchmarks/algorithms/weaviate/: config.yml
ann_benchmarks/plotting/: utils.py
